tests/ui/fail-noincludefound.stderr
error: No such file or directory (os error 2)
 --> $DIR/fail-noincludefound.rs:1:1
  |
1 | #[lazylink::lazylink("c", include="not exists")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
